--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <script>
       (function() {
         var l = window.location;
-        var parts = l.pathname.split('/');
-        var base = '/' + (parts[1] || '') + '/';
+        // Force redirect to the repo path on the user domain
+        var base = '/project-noah/';
         var target = base + 'index.html' + (l.search || '') + (l.hash || '');
         l.replace(target);
       })();
