--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Redirecting…</title>
     <script>
       (function() {
         try {
@@ -14,6 +16,6 @@
     </script>
   </head>
   <body></body>
-</html>
+  </html>
 
 
